--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/runlog/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/runlog/List.razor
@@ -128,7 +128,7 @@
 
     [Parameter]
     public int PageIndex { get; set; } = 1;
-    private int _totalCount;
+    private long _totalCount;
     private int _pageSize = 20;
     private string PageUrl => "/fss/runlog/list/{index}";
     private List<RunLogVO> _lst = new();
