--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/AllList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/AllList.razor
@@ -188,7 +188,7 @@
     private int _lastIndex;
     [Parameter]
     public int PageIndex { get; set; } = 1;
-    private int _totalCount;
+    private long _totalCount;
     private int _pageSize = 20;
     private List<TaskVO> _lst = new();
     private EumTaskType? _taskType;
