--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
@@ -152,7 +152,7 @@
 
     private int _lastIndex;
     [Parameter] public int PageIndex { get; set; } = 1;
-    private int _totalCount;
+    private long _totalCount;
     private int _pageSize = 20;
     private List<TaskVO> _lst = new();
     private Timer _timer;
