--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/AllList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/AllList.razor
@@ -231,7 +231,7 @@
     {
         var page = await _iocManager.Resolve<IFssApi>().GetEnableTaskListAsync(storage, _taskType, _pageSize, PageIndex);
         _lst = page.List;
-        _totalCount = page.TotalCount;
+        _totalCount = page.RecordCount;
     }
 
     private void GotoList()
