--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
@@ -168,7 +168,7 @@
         
         var page = await _iocManager.Resolve<IFssApi>().GetTaskFinishListAsync(storage,_pageSize, PageIndex);
         _lst = page?.List;
-        _totalCount = page.TotalCount;
+        _totalCount = page.RecordCount;
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
@@ -182,7 +182,7 @@
                 {
                     var page = await _iocManager.Resolve<IFssApi>().GetTaskFinishListAsync(storage,_pageSize, PageIndex);
                     _lst = page?.List;
-                    _totalCount = page.TotalCount;
+                    _totalCount = page.RecordCount;
     // 刷新页面
                     await InvokeAsync(StateHasChanged);
                 }
