--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/List.razor
@@ -197,7 +197,7 @@
         _lastIndex = PageIndex;
         var page = await _iocManager.Resolve<IFssApi>().GetTaskListAsync(storage,GroupId, _pageSize, PageIndex);
         _lst = page?.List;
-        _totalCount = page.TotalCount;
+        _totalCount = page.RecordCount;
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
@@ -212,7 +212,7 @@
                     
                     var page = await _iocManager.Resolve<IFssApi>().GetTaskListAsync(storage,GroupId, _pageSize, PageIndex);
                     _lst = page?.List;
-                    _totalCount = page.TotalCount;
+                    _totalCount = page.RecordCount;
     // 刷新页面
                     await InvokeAsync(StateHasChanged);
                 }
