--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Consumer.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Consumer.razor
@@ -2,6 +2,7 @@
 @page "/link_track/link/consumer/{pageIndex:int}"
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
+@using FS.Core
 @using Microsoft.AspNetCore.Components
 @using FS.Core.LinkTrack
 @using FS.Extends
@@ -109,9 +110,9 @@
                 <div class="layui-table-body layui-table-main">
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <tbody>
-                        @for (var index = 0; index < _lst.Count; index++)
+                        @for (var index = 0; index < _lst.List.Count; index++)
                         {
-                            var info = _lst[index];
+                            var info = _lst.List[index];
                             <tr data-index="@index">
                                 <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.AppId</div>
@@ -175,7 +176,7 @@
                     </table>
                 </div>
             </div>
-            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/link_track/link/consumer/{index}"></PageSplit>
+            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_lst.RecordCount" PageUrl="/link_track/link/consumer/{index}"></PageSplit>
         </div>
     </div>
 </div>
@@ -195,12 +196,11 @@
 @code{
 
     private int _lastIndex;
-    private long _totalCount;
     private int _pageSize = 20;
     [Parameter]
     public int PageIndex { get; set; }
     private bool _isFirst;
-    private List<LinkTrackContextPO> _lst = new();
+    private PageList<LinkTrackContextPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
     private string _curSort = "0";
@@ -255,7 +255,7 @@
                     .Desc(d => d.UseTs);
         }
 
-        _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
+        _lst = indexSet.ToPageList(_pageSize, PageIndex);
     }
 
     // 显示报文详情
