--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Http.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Http.razor
@@ -7,6 +7,7 @@
 @using FS.LinkTrack.Dal
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
+@using FS.Core
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -83,9 +84,9 @@
                 <div class="layui-table-body layui-table-main">
                     <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
                         <tbody>
-                        @for (var index = 0; index < _lst.Count; index++)
+                        @for (var index = 0; index < _lst.List.Count; index++)
                         {
-                            var info = _lst[index];
+                            var info = _lst.List[index];
                             <tr data-index="@index">
                                 <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.AppId</div>
@@ -132,7 +133,7 @@
                     </table>
                 </div>
             </div>
-            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/link_track/slow/http/{index}"></PageSplit>
+            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_lst.RecordCount" PageUrl="/link_track/slow/http/{index}"></PageSplit>
         </div>
     </div>
 </div>
@@ -151,12 +152,11 @@
 @code{
 
     private int _lastIndex;
-    private long _totalCount;
     private int _pageSize = 20;
     [Parameter]
     public int PageIndex { get; set; }
     private bool _isFirst;
-    private List<SlowQueryPO> _lst = new();
+    private PageList<SlowQueryPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
     private string _curSort = "0";
@@ -199,7 +199,7 @@
         {
             indexSet.Where(o => o.StartTs >= DateTime.Now.AddMinutes(-_curSort.ConvertType(0)).ToTimestamps()).Desc(d => d.UseTs);
         }
-        _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
+        _lst = indexSet.ToPageList(_pageSize, PageIndex);
     }
 
     // 显示报文详情
