调整属性使用

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Db.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Db.razor
@@ -150,7 +150,7 @@
                     </table>
                 </div>
             </div>
-            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_lst.RecordCount)" PageUrl="/link_track/slow/db/{index}"></PageSplit>
+            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_lst.RecordCount" PageUrl="/link_track/slow/db/{index}"></PageSplit>
         </div>
     </div>
 </div>
