--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Es.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/slow/Es.razor
@@ -131,7 +131,7 @@
                     </table>
                 </div>
             </div>
-            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/link_track/slow/es/{index}"></PageSplit>
+            <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_lst.RecordCount" PageUrl="/link_track/slow/es/{index}"></PageSplit>
         </div>
     </div>
 </div>
@@ -150,7 +150,6 @@
 @code{
 
     private int _lastIndex;
-    private long _totalCount;
     private int _pageSize = 20;
     [Parameter]
     public int PageIndex { get; set; }
