--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Info.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Info.razor
@@ -143,7 +143,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <div class="laytable-cell-14-0-2">
+                                    <div class="laytable-cell-14-0-2" style="white-space:normal">
                                         @linkTrackVO.Desc
                                     </div>
                                 </td>
