--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
@@ -37,7 +37,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">项目名称</label>
                     <div class="layui-input-inline">
-                        <input type="text" @bind="_info.Name" autocomplete="off" placeholder="请输入项目名称" class="layui-input">
+                        <input type="text" @bind="_info.Name" autocomplete="off" placeholder="与K8S中的容器组名称一致" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
