项目添加、修改页面，增加仓库依赖的设置信息

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
@@ -127,12 +127,9 @@
             }
 
             _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync() ?? new();
-            _selectCluster = _lstCluster.ToDictionary(o => o.Id, o => false);
+            _selectCluster = _lstCluster.ToDictionary(o => o.Id, _ => false);
 
-            foreach (var infoClusterId in _info.ClusterIds)
-            {
-                _selectCluster[infoClusterId] = true;
-            }
+            _info.ClusterIds.ForEach(o=>_selectCluster[o] = true);
         }
     }
 
