--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
@@ -10,8 +10,8 @@
 @using FS.Extends
 @using Microsoft.AspNetCore.Components
 @inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+@inject NavigationManager _nav;
+@inject IJSRuntime _js;
 
 <div class="layui-row layui-col-space15">
 <div class="layui-col-md6">
@@ -84,9 +84,71 @@
             </div>
         </div>
     </div>
+</div>
+<div class="layui-col-md6">
+    <div class="layui-card">
+        <div class="layui-card-header">K8S模板</div>
+        <div class="layui-card-body layui-row layui-col-space10">
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label class="layui-form-label">Deployment模板</label>
+                    <div class="layui-input-inline">
+                        <select name="modules" @bind="_info.K8STplDeployment">
+                            <option value="0">不需要</option>
+                            @foreach (var yamlTplVO in _lstTpl.FindAll(o => o.K8SKindType == EumK8SKind.Deployment))
+                            {
+                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">Config模板</label>
+                    <div class="layui-input-inline">
+                        <select name="modules" @bind="_info.K8STplConfig">
+                            <option value="0">不需要</option>
+                            @foreach (var yamlTplVO in _lstTpl.FindAll(o => o.K8SKindType == EumK8SKind.Config))
+                            {
+                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+                    <label class="layui-form-label">Service模板</label>
+                    <div class="layui-input-inline">
+                        <select name="modules" @bind="_info.K8STplService">
+                            <option value="0">不需要</option>
+                            @foreach (var yamlTplVO in _lstTpl.FindAll(o => o.K8SKindType == EumK8SKind.Service))
+                            {
+                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">Ingress模板</label>
+                    <div class="layui-input-inline">
+                        <select name="modules" @bind="_info.K8STplIngress">
+                            <option value="0">不需要</option>
+                            @foreach (var yamlTplVO in _lstTpl.FindAll(o => o.K8SKindType == EumK8SKind.Ingress))
+                            {
+                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+            </div>
+        </div>
+    </div>
+
     <div class="layui-card">
         <div class="layui-card-header">
-            镜像
+            仓库
         </div>
         <div class="layui-card-body layui-row layui-col-space10">
             <div class="layui-form-item">
@@ -101,21 +163,6 @@
                         </select>
                     </div>
                 </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">Dockerfile</label>
-                    <div class="layui-input-inline">
-                        <select @bind="_info.DockerfileTpl">
-                            @foreach (var dockerfileTplVO in _lstDockerfileTpl)
-                            {
-                                <option value="@dockerfileTplVO.Id">@dockerfileTplVO.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
                 <div class="layui-inline">
                     <label class="layui-form-label">Git仓库</label>
                     <div class="layui-input-inline">
@@ -129,67 +176,16 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="layui-col-md6">
-    <div class="layui-card">
-        <div class="layui-card-header">K8S模板</div>
-        <div class="layui-card-body layui-row layui-col-space10">
             <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">Deployment模板</label>
-                    <div class="layui-input-inline">
-                        <select name="modules" @bind="_info.K8STplDeployment">
-                            <option value="0">不需要</option>
-                            @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Deployment))
-                            {
-                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">Service模板</label>
-                    <div class="layui-input-inline">
-                        <select name="modules" @bind="_info.K8STplService">
-                            <option value="0">不需要</option>
-                            @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Service))
-                            {
-                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">Ingress模板</label>
-                    <div class="layui-input-inline">
-                        <select name="modules" @bind="_info.K8STplIngress">
-                            <option value="0">不需要</option>
-                            @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Ingress))
-                            {
-                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">Config模板</label>
-                    <div class="layui-input-inline">
-                        <select name="modules" @bind="_info.K8STplConfig">
-                            <option value="0">不需要</option>
-                            @foreach (var yamlTplVO in _lstTpl.FindAll(O => O.K8SKindType == EumK8SKind.Config))
-                            {
-                                <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
-                            }
-                        </select>
-                    </div>
+                <label class="layui-form-label">依赖仓库</label>
+                <div class="layui-input-block">
+                    @foreach (var gitVO in _lstGit)
+                    {
+                        <div class="layui-unselect layui-form-checkbox layui-form-checked" lay-skin="primary" style="cursor: auto;">
+                            <input type="checkbox" @bind="_selectGits[gitVO.Id]"/>
+                            <span>@gitVO.Name</span>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
@@ -213,6 +209,17 @@
                             @foreach (var eumBuildType in Enum.GetValues<EumBuildType>())
                             {
                                 <option value="@eumBuildType.ToString()">@eumBuildType.GetName()</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-inline">
+                    <label class="layui-form-label">Dockerfile</label>
+                    <div class="layui-input-inline">
+                        <select @bind="_info.DockerfileTpl">
+                            @foreach (var dockerfileTplVO in _lstDockerfileTpl)
+                            {
+                                <option value="@dockerfileTplVO.Id">@dockerfileTplVO.Name</option>
                             }
                         </select>
                     </div>
@@ -246,14 +253,13 @@
     [Parameter]
     public int Id { get; set; }
 
-    private ProjectVO _info = new()
-    {
-    };
+    private ProjectVO _info = new();
     private List<YamlTplVO> _lstTpl = new();
     private List<GitVO> _lstGit = new();
     private List<ProjectGroupVO> _lstGroup = new();
     private List<DockerfileTplVO> _lstDockerfileTpl = new();
     private List<DockerHubVO> _lstDockerHub = new();
+    private Dictionary<int, bool> _selectGits = new();
     private bool _isFirst;
 
     protected override async Task OnInitializedAsync()
@@ -263,6 +269,7 @@
 
         _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync() ?? new();
         _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync() ?? new();
+        _selectGits = _lstGit.ToDictionary(o => o.Id, _ => false);
         _lstDockerfileTpl = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync() ?? new();
         _lstDockerHub = await _iocManager.Resolve<IDockerHubService>().ToListAsync() ?? new();
 
@@ -275,7 +282,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "项目不存在", new
+            await _js.InvokeVoidAsync("layer.alert", "项目不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -289,12 +296,13 @@
                 throw new Exception("项目组、项目名称必须填写。");
             }
 
+            _info.DependentGitIds = _selectGits.Where(o => o.Value).Select(o => o.Key).ToList();
             await _iocManager.Resolve<IProjectService>().UpdateAsync(Id, _info);
             GotoList();
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await _js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -306,7 +314,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "项目不存在", new
+            await _js.InvokeVoidAsync("layer.alert", "项目不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -322,21 +330,20 @@
             _info = await _iocManager.Resolve<IProjectService>().ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("layer.alert", "项目不存在", new
+                await _js.InvokeVoidAsync("layer.alert", "项目不存在", new
                 {
                     icon = 2,
                     title = "出错了"
                 });
                 GotoList();
             }
-            _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync() ?? new();
-            _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync() ?? new();
+            _info.DependentGitIds.ForEach(o => _selectGits[o] = true);
         }
     }
 
     private void GotoList()
     {
-        nav.NavigateTo("/project/list");
+        _nav.NavigateTo("/project/list");
     }
 
     private async Task Delete()
@@ -347,7 +354,7 @@
 
     private async Task ShowEnvTips()
     {
-        await js.InvokeVoidAsync("layer.open", new
+        await _js.InvokeVoidAsync("layer.open", new
         {
             type = 1,
             skin = "layui-layer-molv",
