使用新的枚举扩展方法

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/runlog/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/runlog/List.razor
@@ -23,9 +23,9 @@
 
         <select style="display:inline;width: 200px;" @onchange="LevelChange">
             <option value="">全部</option>
-            @foreach (var logLevel in typeof(LogLevel).ToList())
+            @foreach (var logLevel in typeof(LogLevel).ToList<LogLevel>())
             {
-                <option value="@logLevel">@(((LogLevel)logLevel).ToString())</option>
+                <option value="@logLevel">@logLevel.ToString()</option>
             }
         </select>
     </div>
