完成仓储层的数据库代理

--- a/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/builder/Log.razor
@@ -1,10 +1,10 @@
 @page "/builder/log/{id:int}"
 @using FOPS.Abstract.Builder.Server
 @using FOPS.Abstract.Builder.Entity
-@using FOPS.Abstract.Builder.Enum
 @using System.Timers
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
+@using FOPS.Domain.Build.Enum
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
