--- a/01_Interfaces/FOPS.Blazor/Pages/k8s/cluster/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/k8s/cluster/Add.razor
@@ -2,8 +2,8 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
-@using FOPS.Abstract.MetaInfo.Enum
 @using FOPS.Abstract.MetaInfo.Server
+@using FOPS.Domain.Build.Enum
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
