--- a/01_Interfaces/FOPS.Blazor/Pages/k8s/deploy/List.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/k8s/deploy/List.razor
@@ -1,9 +1,9 @@
 @page "/k8s/deploy/list"
 @using FOPS.Abstract.K8S.Entity
-@using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Server
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
+@using FOPS.Domain.Build.Enum
 @using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
