--- a/01_Interfaces/FOPS.Blazor/Pages/project/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/project/Add.razor
@@ -2,12 +2,11 @@
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
 @using Microsoft.AspNetCore.Components
-@using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.Docker.Entity
 @using FOPS.Abstract.Docker.Server
 @using FOPS.Abstract.K8S.Server
-@using FOPS.Abstract.MetaInfo.Enum
+@using FOPS.Domain.Build.Enum
 @using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager _nav;
