--- a/01_Interfaces/FOPS.Blazor/Pages/project/Update.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/project/Update.razor
@@ -1,12 +1,11 @@
 @page "/project/update/{id:int}"
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.MetaInfo.Server
-@using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.Docker.Entity
 @using FOPS.Abstract.Docker.Server
 @using FOPS.Abstract.K8S.Server
-@using FOPS.Abstract.MetaInfo.Enum
+@using FOPS.Domain.Build.Enum
 @using FS.Extends
 @using Microsoft.AspNetCore.Components
 @inject IIocManager _iocManager;
