--- a/01_Interfaces/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_Interfaces/FOPS.Blazor/Shared/BuildList.razor
@@ -1,9 +1,9 @@
 @using FOPS.Abstract.MetaInfo.Server
-@using FOPS.Abstract.Builder.Enum
 @using FOPS.Abstract.Builder.Server
 @using FOPS.Abstract.MetaInfo.Entity
 @using FOPS.Abstract.Builder.Entity
 @using System.Timers
+@using FOPS.Domain.Build.Enum
 @using FS.Extends
 
 @inject IIocManager _iocManager;
