--- a/01_Interfaces/FOPS.Blazor/Pages/k8s/tpl/Update.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/k8s/tpl/Update.razor
@@ -1,8 +1,8 @@
 @page "/k8s/tpl/update/{id:int}"
 @using Microsoft.AspNetCore.Components
 @using FOPS.Abstract.K8S.Entity
-@using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Server
+@using FOPS.Domain.Build.Enum
 @using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
