--- a/01_Interfaces/FOPS.Blazor/Pages/admin/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/admin/Add.razor
@@ -1,7 +1,7 @@
 @page "/admin/add"
 @using Microsoft.AspNetCore.Components
-@using FOPS.Abstract.MetaInfo.Entity
-@using FOPS.Abstract.MetaInfo.Server
+@using FOPS.Application.Sys.Admin
+@using FOPS.Application.Sys.Admin.Entity
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -44,23 +44,29 @@
 
 @code{
 
-    private readonly AdminVO _info = new() {IsEnable = true};
+    private readonly AdminDTO _info = new()
+    {
+        IsEnable = true
+    };
 
     private async Task AddInfo()
     {
         try
         {
-            if (string.IsNullOrWhiteSpace(_info.UserName) || string.IsNullOrWhiteSpace(_info.UserPwd))
+            await _iocManager.Resolve<AdminApp>().AddAsync(_info);
+            await js.InvokeVoidAsync("layer.msg", "添加成功", new
             {
-                throw new Exception("管理员名称、登陆密码必须填写。");
-            }
-            await _iocManager.Resolve<IAdminService>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
+                icon = 1
+            });
             GotoList();
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
+            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            {
+                icon = 2,
+                title = "出错了"
+            });
         }
     }
 
